objects/Case.object
<CustomObject>
    <fields>
        <fullName>OF_AggiornoOrdine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggiorno Ordine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Blocked_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_Blocked_Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Bonifica_Locked_Row__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bonifica Locked Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Bretella_Ottica__c</fullName>
        <label>OF_Bretella_Ottica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Bypassa_SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypassa SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CPE_Quantity__c</fullName>
        <description>Campo del servizio remedy CPE ADD.</description>
        <label>CPE Quantity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CPE_Serial_Number__c</fullName>
        <description>Campo del servizio remedy CPE ADD.</description>
        <label>CPE Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CanBeDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo per identificare le richieste a fattibilità inserite da portale con la vecchia logica</description>
        <label>Cancellabile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CodiceKOOrdine__c</fullName>
        <formula>OF_Order__r.OF_CodiceKO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice KO ordine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Codice_Operatore_Secondario__c</fullName>
        <label>OF_Codice_Operatore_Secondario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Data_di_Caricamento__c</fullName>
        <description>Timestamp</description>
        <label>Data di Caricamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DescrizioneKOOrdine__c</fullName>
        <formula>OF_Order__r.OF_DescrizioneKO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descrizione KO ordine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_EsitoConsegnaApparatoTest__c</fullName>
        <label>OF_EsitoConsegnaApparatoTest</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_EsitoOrdine__c</fullName>
        <formula>TEXT( OF_Order__r.OF_Esito__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Esito ordine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Esito_Consegna_Apparato__c</fullName>
        <label>Esito Consegna Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Estensione_Impianto_Effettuata__c</fullName>
        <label>OF_Estensione_Impianto_Effettuata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Estensione_Impianto__c</fullName>
        <label>OF_Estensione_Impianto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_FaultResolution__c</fullName>
        <description>Campo del servizio remedy Assurance ADD.</description>
        <label>FaultResolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Flag_Desospensione__c</fullName>
        <label>OF_Flag_Desospensione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Flag_Pagamento__c</fullName>
        <label>Flag Pagamento</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Flusso_Retry__c</fullName>
        <label>OF_Flusso_Retry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDContratto__c</fullName>
        <label>ID Contratto</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Id_Borchia__c</fullName>
        <label>Id Borchia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ListinoScelto__c</fullName>
        <formula>if ( 
(right(OF_SA_Profilo__c,(len(OF_SA_Profilo__c)) - (len(OF_SA_Profilo__c)-2))) = &apos;F1&apos;,&apos;Listino F1&apos;, 

if ( 
(right(OF_SA_Profilo__c,(len(OF_SA_Profilo__c)) - (len(OF_SA_Profilo__c)-2))) = &apos;F2&apos;,&apos;Listino F2&apos;, 

if ( 
(right(OF_SA_Profilo__c,(len(OF_SA_Profilo__c)) - (len(OF_SA_Profilo__c)-2))) = &apos;F3&apos;,&apos;Listino F3&apos;, 

if ( 
(right(OF_SA_Profilo__c,(len(OF_SA_Profilo__c)) - (len(OF_SA_Profilo__c)-2))) = &apos;F4&apos;,&apos;Listino F4&apos;, 

if ( 
(right(OF_SA_Profilo__c,(len(OF_SA_Profilo__c)) - (len(OF_SA_Profilo__c)-2))) = &apos;F5&apos;,&apos;Listino F5&apos;, 

&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Listino Scelto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Metri_TOT__c</fullName>
        <label>OF_Metri_TOT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_OM_Nuovo_Flusso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_OM_Nuovo_Flusso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Ordine__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  OF_Order__r.Id ,  OF_Order__r.OrderNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_PALAZZINA__c</fullName>
        <label>OF_PALAZZINA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Remote_ID__c</fullName>
        <label>OF_Remote_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Response_Da_OLO__c</fullName>
        <label>Response Da OLO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Response_Da_OM__c</fullName>
        <label>Response Da OM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Response_da_SH__c</fullName>
        <label>OF_Response_da_SH</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Response_da_TTM__c</fullName>
        <label>Response_da_TTM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Retry_Automatico__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry Automatico</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_SA_Autonumber_OM__c</fullName>
        <label>Autonumber OM</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>OF_SA_CODICE_PROGETTO_SPECIALE__c</fullName>
        <label>Codice Progetto Speciale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Cluster_Promozione__c</fullName>
        <label>Cluster Promozione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Codice_Motivazione__c</fullName>
        <label>Codice Motivazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ID_Building_OM__c</fullName>
        <label>ID Building OM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_ID_Servizio__c</fullName>
        <label>ID Servizio</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_INFORMAZIONI_LOGISTICA_APPARATI__c</fullName>
        <label>Informazioni Logistica Apparati</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Interfaccia_OM__c</fullName>
        <label>Interfaccia OM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nuova IF</fullName>
                </value>
                <value>
                    <fullName>Vecchia IF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_SA_Motivazione__c</fullName>
        <label>Motivazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Profilo__c</fullName>
        <label>Profilo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Promozione__c</fullName>
        <label>Promozione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_Tipo_Lavorazione__c</fullName>
        <label>Tipo Lavorazione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attivazione</fullName>
                </value>
                <value>
                    <fullName>Cessazione</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_SH_DeliveryCompany__c</fullName>
        <label>OF_SH_DeliveryCompany</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SH_ID_WO__c</fullName>
        <label>OF_SH_ID_WO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SH_Token_id__c</fullName>
        <label>OF_SH_Token_id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Scala__c</fullName>
        <label>OF_Scala</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Servizio__c</fullName>
        <description>Campo che indica il tipo di servizio (GPON Passiva o Open Stream).
Utilizzato per filtrare i casi negli asset intervento a vuoto</description>
        <label>Servizio</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Source__c</fullName>
        <description>Valore &quot;Remedy&quot;</description>
        <label>Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_StatoOrdine__c</fullName>
        <formula>TEXT(OF_Order__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stato ordine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Subject__c</fullName>
        <formula>Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TT_Number__c</fullName>
        <description>Campo del servizio remedy Assurance ADD.</description>
        <label>TT Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TT_Tipo_Risorsa__c</fullName>
        <label>Tipo Risorsa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TroubleTicketManager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the case has been created with the new TTM system</description>
        <label>OF_TroubleTicketManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Vertical_Operator__c</fullName>
        <description>Campo del servizio remedy FTTH In Order.</description>
        <label>Vertical Operator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_isFromWFUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFromWFUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLO_Comm_Code__c</fullName>
        <label>OLO_Comm_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLO_ORDER_CODE__c</fullName>
        <label>OLO ORDER CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperatorePartner__c</fullName>
        <label>Operatore Partner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Accordo_Quadro_Number__c</fullName>
        <label>Accordo Quadro</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Accordo_Quadro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship with Contract Accordo Quadro for Servizi a Fattibilità</description>
        <label>Contract Id</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Acquisizione_infrastruttura_esistente__c</fullName>
        <label>Acquisizione infrastruttura esistente</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Area_Geografica_Comune__c</fullName>
        <formula>PO_Comune2__r.OF_Ripartizionegeografica__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Geografica Comune</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Area_Geografica__c</fullName>
        <label>Area Geografica</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nord Est</fullName>
                    <default>true</default>
                    <label>Nord Est</label>
                </value>
                <value>
                    <fullName>Nord Ovest</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
                <value>
                    <fullName>Sud</fullName>
                </value>
                <value>
                    <fullName>Isole</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Assegnato_a_relativa_coda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assegnato a relativa coda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Assegnazione_Area_Geografica__c</fullName>
        <label>Assegnazione Referente Area Geografica</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nord Est</fullName>
                </value>
                <value>
                    <fullName>Nord Ovest</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
                <value>
                    <fullName>Sud</fullName>
                </value>
                <value>
                    <fullName>Isole</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Attenuazione__c</fullName>
        <label>Attenuazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_BB_1_interessato__c</fullName>
        <label>BB 1° interessato (m)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_BB_1_interessato_m_NC__c</fullName>
        <label>BB 1° interessato (m) NC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_BB_1_via_interessato__c</fullName>
        <label>Cavo esistente 1° via (m)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_BB_2_interessato__c</fullName>
        <label>BB 2° interessato (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_BB_2_interessato_m_NC__c</fullName>
        <label>BB 2° interessato (m) NC</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_BB_2_via_interessato__c</fullName>
        <label>Cavo esistente 2° via (m)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_BTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Backhauling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backhauling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Case_Collegamento__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Collegamento</description>
        <label>Case Collegamento</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases (Case Collegamento)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Case_Type_Formula__c</fullName>
        <formula>IF(
AND(PO_Richiesta_a_fattibilit__c == null,PO_Case_Collegamento__c == null),
&quot;Richieste&quot;,

IF(

PO_Richiesta_a_fattibilit__c != null,
&quot;Collegamento&quot;,
IF(

PO_Case_Collegamento__c!= null,
&quot;Ordine&quot;,
&quot;Not Defined&quot;
  )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Caso_assegnato_a__c</fullName>
        <formula>IF( ISBLANK( Owner:Queue.QueueName ) , Owner:User.FirstName + &quot; &quot; + Owner:User.LastName , Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Caso assegnato a</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Cavo_esistente_1_via_m_NC__c</fullName>
        <label>Cavo esistente 1° via (m) NC</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Cavo_esistente_2_via_m_NC__c</fullName>
        <label>Cavo esistente 2° via (m) NC</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Centro_fatturazione_cliente__c</fullName>
        <label>Centro fatturazione cliente</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Change_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_CircuitiDiretti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO_CircuitiDiretti</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Civico_3__c</fullName>
        <label>Civico</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Civico__c</fullName>
        <label>Civico</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Civico_partenza__c</fullName>
        <label>Civico</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Classi_di_funzionalit_a_cui_accedere__c</fullName>
        <label>Classi di funzionalità a cui accedere</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Cognome_Registrazione__c</fullName>
        <label>Cognome Registrazione</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Comune2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comune</label>
        <referenceTo>OF_ElencoComuniItaliani__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Comune3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comune</label>
        <referenceTo>OF_ElencoComuniItaliani__c</referenceTo>
        <relationshipLabel>Cases (Comune)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Comune4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comune</label>
        <referenceTo>OF_ElencoComuniItaliani__c</referenceTo>
        <relationshipLabel>Cases (Comune)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Contenitore_ID_Oppty_parent__c</fullName>
        <label>Contenitore ID Oppty parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Contratto_quadro_di_riferimento__c</fullName>
        <label>Contratto quadro di riferimento</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Costi_aggiuntivi_collegamento__c</fullName>
        <formula>PO_Costo_lavori_civili__c +  PO_Costo_lavori_ottici__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costi Totali</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_CostoSopralluogoNC__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Costo sopralluogo NC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_lavori_civili_NC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Costo lavori civili NC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_lavori_civili__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Costo lavori civili</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_lavori_ottici_NC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Costo lavori ottici NC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_lavori_ottici__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Costo lavori ottici</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_sopralluogo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Costo sopralluogo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Costo_struttura__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Costo struttura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_CreatedDate__c</fullName>
        <formula>TEXT(DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO_CreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_DarkFiber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dark Fiber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Data_Attivazione_Ordine__c</fullName>
        <label>Data Attivazione Ordine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Data_Attivazione_Richiesta__c</fullName>
        <label>Data Attivazione Richiesta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Data_Espletamento_Ordine__c</fullName>
        <label>Data Espletamento Ordine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Disponibilit_della_rete_NC_a_partire__c</fullName>
        <label>Disponibilità della rete NC a partire da</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Disponibilit_della_rete_a_partire_da__c</fullName>
        <label>Disponibilità della rete a partire da</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Drop_FL_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drop FL (1)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Drop_FL_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drop FL (2)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Durata_affitto__c</fullName>
        <label>Durata affitto</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Durata_mesi__c</fullName>
        <label>Durata (mesi)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Email_Registrazione__c</fullName>
        <label>Email Registrazione</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PO_Esito_collegamento__c</fullName>
        <label>Esito collegamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SI Inf. + Scavo</fullName>
                </value>
                <value>
                    <fullName>SI Inf. Esistente</fullName>
                </value>
                <value>
                    <fullName>SI Inf. OP</fullName>
                </value>
                <value>
                    <fullName>SI in FTTH</fullName>
                </value>
                <value>
                    <fullName>SI On Net</fullName>
                </value>
                <value>
                    <fullName>SI Scavo</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_FATT_History_Owner__c</fullName>
        <label>History Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Fiber_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fiber Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Fiber_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fiber Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_IRU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IRU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Incluso_nell_offerta__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Incluso nell&apos;offerta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Indirizzo_collegamento__c</fullName>
        <label>Indirizzo collegamento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Indirizzo_collegamento_partenza__c</fullName>
        <label>Indirizzo collegamento</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Indirizzo_sito__c</fullName>
        <label>Indirizzo sito</label>
        <length>13100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_IndrizoCal__c</fullName>
        <formula>PO_Indirizzo_collegamento__c + &quot; &quot; + PO_Civico__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO_IndrizoCal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_KIT_Consegna_VLAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KIT Consegna VLAN</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Collegamenti</relationshipLabel>
        <relationshipName>Collegamenti_del_KIT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Listino__c</fullName>
        <label>Listino</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_Ottica__c</fullName>
        <label>Lunghezza Ottica (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_m2__c</fullName>
        <label>Lunghezza Drop FL 2 (m)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_m__c</fullName>
        <label>Lunghezza Drop FL 1 (m)</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_scavi__c</fullName>
        <label>Lunghezza scavi (m)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_scavi_a_carico_Fastweb__c</fullName>
        <label>Lunghezza scavi a carico Fastweb (m)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_scavi_a_carico_Fastweb_m_NC__c</fullName>
        <label>Lunghezza scavi a carico Fastweb (m) NC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_scavi_acq_tubaz_3_parti_NC__c</fullName>
        <label>Lunghezza scavi acq. tubaz. 3°parti NC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_scavi_acquisiz_tubaz_3_part__c</fullName>
        <label>Lunghezza scavi acquisiz. tubaz. 3°parti</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_scavi_m_NC__c</fullName>
        <label>Lunghezza scavi (m) NC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_tratta_prima_via_FiberLink__c</fullName>
        <formula>PO_BB_1_interessato__c +  PO_Posa_1_nuovo_Drop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta prima via (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_tratta_prima_via__c</fullName>
        <formula>PO_BB_1_via_interessato__c +  PO_Posa_1_via_nuovo_Drop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta prima via (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_tratta_prima_via_m_NC_Lease__c</fullName>
        <formula>PO_BB_1_interessato_m_NC__c +  PO_Posa_1_nuovo_Drop_m_NC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta prima via (m) NC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_tratta_prima_via_m_NC__c</fullName>
        <formula>PO_Cavo_esistente_1_via_m_NC__c +  PO_Posa_nuovo_cavo_1_via_m_NC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta prima via (m) NC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_tratta_seconda_via_FiberLin__c</fullName>
        <formula>PO_BB_2_interessato__c + PO_Posa_2_nuovo_Drop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta seconda via (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_tratta_seconda_via__c</fullName>
        <formula>PO_BB_2_via_interessato__c +  PO_Posa_2_via_nuovo_Drop__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta seconda via (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Lunghezza_tratta_seconda_via_m_NC_Lea__c</fullName>
        <formula>PO_BB_2_interessato_m_NC__c +  PO_Posa_2_nuovo_Drop_m_NC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunghezza tratta seconda via (m) NC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>